// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders primary and secondary labels 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: 60px;
}

.emotion-2 {
  font-weight: 500;
}

.emotion-3 {
  color: #8798ad;
}

.emotion-4 {
  height: 0;
  margin: 0;
  width: 0;
  opacity: 0;
}

.emotion-5 {
  background-color: rgba(135,152,173,0.4);
  border-radius: 10px;
  cursor: pointer;
  height: 20px;
  position: relative;
  width: 36px;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-5::before {
  background-color: #fff;
  border-radius: 50%;
  content: "";
  height: 16px;
  left: 2px;
  position: absolute;
  top: 2px;
  width: 16px;
  -webkit-transition: -webkit-transform,300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: transform,300ms cubic-bezier(0.4, 0, 0.6, 1);
}

input:checked+.emotion-5::before {
  -webkit-transform: translateX(16px);
  -moz-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

input:checked:enabled+.emotion-5 {
  background-color: #33ac2e;
}

input:disabled+.emotion-5 {
  opacity: 0.4;
}

<div>
  <label
    class="emotion-0"
    data-testid="switch"
  >
    <div
      class="emotion-1"
    >
      <span
        class="emotion-2"
        data-testid="switch-primary"
      >
        You can't input the array without navigating the redundant GB alarm!
      </span>
      <span
        class="emotion-3"
        data-testid="switch-secondary"
      >
        You can't input the array without navigating the redundant GB alarm!
      </span>
    </div>
    <input
      class="emotion-4"
      data-testid="switch-input"
      type="checkbox"
    />
    <span
      class="emotion-5"
    />
  </label>
</div>
`;

exports[`Switch renders primary label 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: 60px;
}

.emotion-2 {
  font-weight: 500;
}

.emotion-3 {
  height: 0;
  margin: 0;
  width: 0;
  opacity: 0;
}

.emotion-4 {
  background-color: rgba(135,152,173,0.4);
  border-radius: 10px;
  cursor: pointer;
  height: 20px;
  position: relative;
  width: 36px;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-4::before {
  background-color: #fff;
  border-radius: 50%;
  content: "";
  height: 16px;
  left: 2px;
  position: absolute;
  top: 2px;
  width: 16px;
  -webkit-transition: -webkit-transform,300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: transform,300ms cubic-bezier(0.4, 0, 0.6, 1);
}

input:checked+.emotion-4::before {
  -webkit-transform: translateX(16px);
  -moz-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

input:checked:enabled+.emotion-4 {
  background-color: #33ac2e;
}

input:disabled+.emotion-4 {
  opacity: 0.4;
}

<div>
  <label
    class="emotion-0"
    data-testid="switch"
  >
    <div
      class="emotion-1"
    >
      <span
        class="emotion-2"
        data-testid="switch-primary"
      >
        The SMS program is down, synthesize the redundant feed so we can synthesize the SQL hard drive!
      </span>
    </div>
    <input
      class="emotion-3"
      data-testid="switch-input"
      type="checkbox"
    />
    <span
      class="emotion-4"
    />
  </label>
</div>
`;

exports[`Switch renders secondary label 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: 60px;
}

.emotion-2 {
  color: #8798ad;
}

.emotion-3 {
  height: 0;
  margin: 0;
  width: 0;
  opacity: 0;
}

.emotion-4 {
  background-color: rgba(135,152,173,0.4);
  border-radius: 10px;
  cursor: pointer;
  height: 20px;
  position: relative;
  width: 36px;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1),opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-4::before {
  background-color: #fff;
  border-radius: 50%;
  content: "";
  height: 16px;
  left: 2px;
  position: absolute;
  top: 2px;
  width: 16px;
  -webkit-transition: -webkit-transform,300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: transform,300ms cubic-bezier(0.4, 0, 0.6, 1);
}

input:checked+.emotion-4::before {
  -webkit-transform: translateX(16px);
  -moz-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

input:checked:enabled+.emotion-4 {
  background-color: #33ac2e;
}

input:disabled+.emotion-4 {
  opacity: 0.4;
}

<div>
  <label
    class="emotion-0"
    data-testid="switch"
  >
    <div
      class="emotion-1"
    >
      <span
        class="emotion-2"
        data-testid="switch-secondary"
      >
        You can't quantify the interface without parsing the neural ADP feed!
      </span>
    </div>
    <input
      class="emotion-3"
      data-testid="switch-input"
      type="checkbox"
    />
    <span
      class="emotion-4"
    />
  </label>
</div>
`;
